# PiliPili_Strm

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/core/api/: mod.rs
src/core/api/emby/: emby_api.rs  mod.rs
src/core/api/telegram/: markdown.rs  mod.rs  photo_message.rs  response.rs  telegram_api.rs  telegram_response.rs  text_message.rs
src/core/client/: mod.rs
src/core/client/telegram/: client.rs  markdown.rs  mod.rs  telegram_client.rs
src/infrastructure/api/: emby_api.rs  mod.rs
src/infrastructure/fs/: dir_location.rs  dir_sync_config.rs  dir_sync_helper.rs  mod.rs  path_helper.rs  ssh_config.rs  watchable.rs  watcher.rs  watcher_callback.rs  watcher_state.rs
src/infrastructure/fs/dir/: mod.rs  ssh_config.rs  sync_config.rs  sync_helper.rs
src/infrastructure/fs/file/: file_helper.rs  mod.rs  path_helper.rs
src/infrastructure/fs/watcher/: mod.rs  state.rs  watchable.rs  watcher.rs
src/infrastructure/logger/: builder.rs  level.rs  macros.rs  mod.rs  rotation.rs
src/infrastructure/network/: curl_plugin.rs  extension.rs  http_method.rs  mod.rs  plugin.rs  provider.rs  target.rs  task.rs
src/infrastructure/strm/: file_sync.rs  file_watcher.rs  media_detector.rs  mod.rs  strm_generator.rs  sync_config.rs  sync_error.rs  sync_method.rs  sync_strategy.rs
tests/: config_tests.rs  dir_tests.rs  emby_tests.rs  file_tests.rs  logger_tests.rs  strm_tests.rs  telegram_tests.rs
