[package]
name = "pilipili_strm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
notify = "8.0.0"
once_cell = "1.21.1"
regex = "1.11.1"
reqwest = { version = "0.12.14", default-features = false, features = [
    "gzip",
    "http2",
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.39", features = ["macros", "local-offset"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "fmt",
    "env-filter",
    "tracing-log",
    "time",
    "local-time",
    "json"
] }
thiserror = "2.0.12"
tempfile = "3.19.1"
anyhow = "1.0.97"