[package]
name = "pilipili_strm"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.85"
authors = ["PiliPili <pilipili@admin.com>"]
description = "Another STRM generation and synchronization tool, written in Rust."

[profile.release]
opt-level = 3
lto = "thin"
strip = true
debug = "limited"
codegen-units = 1

[profile.dev]
debug = true

[dependencies]
ctrlc = "3.4.5"
dirs = "6.0.0"
notify = { version = "8.0.0", features = ["serde"] }
once_cell = "1.21.2"
reqwest = { version = "0.12.15", default-features = false, features = [
    "gzip",
    "http2",
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_regex = "1.1.0"
time = { version = "0.3.39", features = ["macros", "local-offset"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["time"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "fmt",
    "env-filter",
    "tracing-log",
    "time",
    "local-time",
    "json"
] }
tempfile = "3.19.1"
regex = "1.11.1"
anyhow = "1.0.97"